Fix #5 Adjacent players rendered correctly Use embedded <img> rather than css image - http://stackoverflow.com/questions/35237896/adjacent-content-url-table-elements-result-in-incorrect-table-layout _boardController.setPlayerCell() function

--- a/client/css/board.css
+++ b/client/css/board.css
@@ -87,14 +87,8 @@ table.gameboard td.attackable {
 
 
 /* Avatars */
-table.gameboard td.player-1 {
-	background: 	#00ccff !important;
-	content:url( '../images/BabyDuck.png' );
+table.gameboard td.player-0 img,
+table.gameboard td.player-1 img {
+	width: 		25px;
+	height: 	25px;
 }
-
-table.gameboard td.player-0 {
-	background: 	magenta	!important;
-	content:url( '../images/MadWizard.png' );
-}
-
-
